# stm32_mcu_server

./: .gitignore  CMakeLists.txt
.devcontainer/: devcontainer.json
cube_mx_src/: .mxproject  cube_mx_src.ioc
cube_mx_src/Src/: main.c
docker/: dev.dockerfile
mcu_hal/: .mxproject  CMakeLists.txt  mcu_hal.ioc
mcu_hal/cmake/: gcc-arm-none-eabi.cmake
mcu_hal/cmake/stm32cubemx/: CMakeLists.txt
src/: stm_mcu_server.c  stm_mcu_server.cpp
